--- a/README
+++ b/README
@@ -1,8 +1,13 @@
 Board Breakdown
 
 bitRead:
-The bitRead function takes to parameters
-bitRead(x, n)
-Parameters
-x: the number from which to read
-n: which bit to read, starting at 0 for the least-significant (rightmost) bit
+The bitRead function takes two parameters:
+	1. The set of bits to read i.e(100101)
+	2. Which bit to read. The Oth bit is the rightmost bit.
+	
+Ex. If we have the set 100101
+	When we call bitRead(000001,0) it should return 1.
+	
+bitRead and digitalWrite:
+	When 
+
